--- a/src/client/ActionSvgEntryField.scss
+++ b/src/client/ActionSvgEntryField.scss
@@ -1,5 +1,5 @@
 /*
- * Copyright 2025 Inclusive Design Research Centre, OCAD University
+ * Copyright 2025-2026 Inclusive Design Research Centre, OCAD University
  * All rights reserved.
  *
  * Licensed under the New BSD license. You may not use this file except in
@@ -11,5 +11,4 @@
 
 .actionSvgEntryField {
   width: 25rem;
-  background: white
 }
