--- a/src/client/index.scss
+++ b/src/client/index.scss
@@ -55,3 +55,7 @@ svg.inter-word-padding {
   grid-template-columns: 0.1fr 1fr;
   column-gap: 0.5rem;
 }
+
+#SvgEntryDialog, #SearchGlossDialog, #searchGlossResults {
+  margin: 0.5rem;
+}
